--- a/action.yaml
+++ b/action.yaml
@@ -1,16 +1,9 @@
 # action.yml
-name: 'Date Checker'
+name: 'Twisto Date-Checker'
 description: 'Check if date pass requirements'
-inputs:
-  holiday:
-    description: 'Check if day is holiday'
-    required: false
-    default: ''
 outputs:
   result:
-    description: 'Date check status'
+    description: 'Date validation result'
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  args:
-    - ${{ inputs.holiday }}
